[gd_scene load_steps=2 format=2]

[ext_resource path="res://Escenas/GrupoAliens.gd" type="Script" id=1]

[node name="GrupoAliens" type="Node"]
script = ExtResource( 1 )

[node name="TimerDescender" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="TimerDisparar" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="TimerDescender" to="." method="_on_TimerDescender_timeout"]
[connection signal="timeout" from="TimerDisparar" to="." method="_on_TimerDisparar_timeout"]
